--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --theme-color: #ec8951;
+  --theme-color: #1e376c;
   /* ck editor variables */
   --ck-color-base-active: var(--theme-color) !important;
   --ck-color-base-active-focus: var(--theme-color) !important;
@@ -34,7 +34,7 @@ $grey-9: #999999;
 $inner-bg: #f8f8f8;
 $grey-darker: #222222;
 $bg-color: #fafafb;
-$primary-color: #ec8951;
+$primary-color: #1e376c;
 $secondary-color: #6c757d;
 $success-color: rgb(25, 135, 84);
 $info-color: #a927f9;
