--- a/public/assets/scss/pages/_dashboard.scss
+++ b/public/assets/scss/pages/_dashboard.scss
@@ -455,7 +455,7 @@
       background-color: rgba(236, 137, 81, 0.1);
 
       .widget-icon {
-        background-color: #ec8951;
+        background-color: #1e376c;
       }
     }
   }
